--- a/studio_zora/cover.css
+++ b/studio_zora/cover.css
@@ -108,15 +108,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  html,
-  body {
-  background-image: url("images/inner-01.jpg");
-  background-size: cover;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  height: 100%;
-  background-color: #333;
-  }
   .masthead-brand {
     float: left;
   }
@@ -181,4 +172,17 @@ body {
   .cover-container {
     width: 700px;
   }
+}
+
+@media (min-width: 1200px) {
+  html,
+  body {
+  background-image: url("images/inner-01.jpg");
+  background-size: cover;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  background-color: #333;
+  }  
 }
