--- a/studio_zora/cover.css
+++ b/studio_zora/cover.css
@@ -167,13 +167,24 @@ body {
 }
 
 @media (min-width: 992px) {
+  html,
+  body {
+  background-image: url("images/inner-01.jpg");
+  background-size: cover;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  background-color: #333;
+  }  
+}
   .masthead,
   .mastfoot,
   .cover-container {
     width: 700px;
   }
 }
-
+/*
 @media (min-width: 1200px) {
   html,
   body {
@@ -186,3 +197,4 @@ body {
   background-color: #333;
   }  
 }
+*/
